# WeatherEdge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.do/: app.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 317867a84a41_initial_schema.py  5cd46cb0df3b_add_wx_observations_table_and_wx_prob_.py  a1b2c3d4e5f6_add_units_column_to_wx_observations.py  b2c3d4e5f6g7_add_station_biases_table.py  c3d4e5f6g7h8_add_forecast_exceedance_alerts.py  d4e5f6g7h8i9_metar_unique_constraint.py  e5f6g7h8i9j0_exceedance_projection_columns.py  f6g7h8i9j0k1_add_station_normals_table.py  g7h8i9j0k1l2_add_trade_redeemed_at.py  h8i9j0k1l2m3_add_forecast_archive.py  i9j0k1l2m3n4_signals_unique_market_direction.py  j0k1l2m3n4o5_strategy_telemetry.py
src/: bet_helpers.py  cli.py  config.py  logging_utils.py  resolution.py  scheduler.py
tests/: test_aviation.py  test_aviation_aggregator.py  test_aviation_composite.py  test_aviation_parsers.py  test_aviation_providers.py  test_circuit_breakers.py  test_confirmation.py  test_consensus_calibration.py  test_dryrun_no_phantom_fills.py  test_edge_calculator.py  test_forecast_exceedance.py  test_gfs.py  test_lock_rules.py  test_openmeteo.py  test_polymarket.py  test_probability_engine.py  test_projected_market_lookup.py  test_resolution.py  test_risk.py  test_scheduler.py  test_signals.py  test_state_aggregator.py  test_station_bias.py  test_station_normals.py  test_wu_history.py  test_wx.py
(+48 files in other folders)
