[tool.poetry]
name = "weather-edge"
version = "0.1.0"
description = "Weather-driven Polymarket edge detection and trading signals"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.28"
tenacity = "^9.0"
apscheduler = "^3.10"
python-dotenv = "^1.0"
herbie-data = ">=2024.0"
xarray = ">=2024.0"
cfgrib = ">=0.9"
numpy = ">=1.26"
scipy = ">=1.12"
ecmwf-opendata = ">=0.3"
python-dateutil = "^2.9"
metar = "^1.11"
python-telegram-bot = {extras = ["httpx"], version = "^21.0"}
click = "^8.1"
streamlit = ">=1.33"
psycopg2-binary = ">=2.9"
plotly = ">=5.0"
pandas = ">=2.0"
py-clob-client = ">=0.34"
web3 = ">=7.0"
playwright = "^1.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"

[tool.poetry.scripts]
weather-edge = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"